--- a/phrasal_appraisal/static/theme.css
+++ b/phrasal_appraisal/static/theme.css
@@ -1,9 +1,8 @@
-@import url(//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700);
+/* General */
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700);
 body {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 300;
-  color: #ffffff;
-  background: #bc2131;
 }
 h1,
 h2,
@@ -26,31 +25,89 @@ p {
 .font-bold {
   font-weight: 700;
 }
+/* Content */
 .starter-template {
-  margin-top: 250px;
+  margin-top: 50px;
 }
+
+.starter-template .logo {
+  /* For SVG logo, size is modifiable */
+  height: 128px;
+  width: 128px;
+}
+
 .starter-template .content {
   margin-left: 10px;
 }
+/* Don't allow <pre> blocks to be affected by rewrapping */
+.starter-template .content pre {
+    text-align: left;
+}
 .starter-template .content h1 {
   margin-top: 10px;
-  font-size: 60px;
+  font-size: 50px;
 }
 .starter-template .content h1 .smaller {
-  font-size: 40px;
-  color: #f2b7bd;
+  font-size: 30px;
 }
 .starter-template .content .lead {
-  font-size: 25px;
-  color: #f2b7bd;
+  font-size: 20px;
 }
 .starter-template .content .lead .font-normal {
-  color: #ffffff;
 }
+.starter-template .content-form {
+}
+/* Messages */
+.starter-template .message-detail-entry {
+}
+/* Phrase results */
+.starter-template .phrase-group-title {
+  font-weight: normal;
+  margin-left: 9.5px;
+}
+.starter-template .phrase-results {
+  padding: 9.5px;
+  border-radius: 4px;
+  margin-bottom: 5px;
+}
+.starter-template .phrase-results-highlight {
+  /*padding: 3px;*/
+  padding-left: 3px;
+  padding-right: 3px;
+  border-radius: 3px;
+}
+.starter-template .phrase-results-depth-1 {
+}
+.starter-template .phrase-results-depth-2 {
+}
+.starter-template .phrase-results-depth-3 {
+}
+.starter-template .phrase-results-depth-4 {
+}
+.starter-template .phrase-results-depth-5 {
+}
+.starter-template .phrase-results-depth-6 {
+}
+.starter-template .phrase-results-depth-7 {
+}
+.starter-template .phrase-results-depth-8 {
+}
+.starter-template .phrase-results-depth-max {
+}
+.starter-template .phrase-results-normal {
+}
+.starter-template .phrase-seed-note {
+  margin-top: 9.5px;
+  margin-bottom: 9.5px;
+}
+.starter-template .phrase-seed-content {
+  font-style: italic;
+}
+/* Footer */
 .starter-template .links {
   float: right;
   right: 0;
-  margin-top: 125px;
+  margin-top: 15px;
 }
 .starter-template .links ul {
   display: block;
@@ -69,41 +126,43 @@ p {
   margin-right: 0;
 }
 .starter-template .links ul li.current-version {
-  color: #f2b7bd;
   font-weight: 400;
 }
 .starter-template .links ul li a, a {
-  color: #f2b7bd;
   text-decoration: underline;
 }
 .starter-template .links ul li a:hover, a:hover {
-  color: #ffffff;
   text-decoration: underline;
 }
 .starter-template .links ul li .icon-muted {
-  color: #eb8b95;
   margin-right: 5px;
 }
 .starter-template .links ul li:hover .icon-muted {
-  color: #ffffff;
+}
+.starter-template .powered-by {
 }
 .starter-template .copyright {
   margin-top: 10px;
   font-size: 0.9em;
-  color: #f2b7bd;
   text-transform: lowercase;
   float: right;
   right: 0;
 }
+/* Responsive design */
 @media (max-width: 1199px) {
+  .starter-template .logo {
+    /* For SVG logo, size is modifiable */
+    height: 96px;
+    width: 96px;
+  }
   .starter-template .content h1 {
-    font-size: 45px;
+    font-size: 35px;
   }
   .starter-template .content h1 .smaller {
-    font-size: 30px;
+    font-size: 20px;
   }
   .starter-template .content .lead {
-    font-size: 20px;
+    font-size: 16px;
   }
 }
 @media (max-width: 991px) {
@@ -111,7 +170,10 @@ p {
     margin-top: 0;
   }
   .starter-template .logo {
-    margin: 40px auto;
+    margin: 20px auto;
+    /* For SVG logo, size is modifiable */
+    height: 64px;
+    width: 64px;
   }
   .starter-template .content {
     margin-left: 0;
@@ -123,7 +185,7 @@ p {
   .starter-template .links {
     float: none;
     text-align: center;
-    margin-top: 60px;
+    margin-top: 10px;
   }
   .starter-template .copyright {
     float: none;
@@ -132,14 +194,14 @@ p {
 }
 @media (max-width: 767px) {
   .starter-template .content h1 .smaller {
-    font-size: 25px;
+    font-size: 20px;
     display: block;
   }
   .starter-template .content .lead {
     font-size: 16px;
   }
   .starter-template .links {
-    margin-top: 40px;
+    margin-top: 5px;
   }
   .starter-template .links ul li {
     display: block;
